src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Corporate_Registration_Number__c</fullName>
        <formula>Opportunity.Account.Corporate_Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Corporate Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Involved_Party_ID__c</fullName>
        <formula>Opportunity.Account.Involved_Party_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_from_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Valid from date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_to_date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <label>Valid to date</label>
        <type>Date</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>